--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.error-block{
+    color:red;
+}
+.ng-invalid.ng-touched{
+    border-color: red;
+}
+
