--- a/src/app/Admin/category/addcategory/add-category.component.html
+++ b/src/app/Admin/category/addcategory/add-category.component.html
@@ -11,23 +11,24 @@
             </div>
             <!-- /.card-header -->
             <!-- form start -->
-            <form role="form">
+            <form #categoryForm="ngForm" (ngSubmit)="AddCategory(categoryForm)">
               <div class="card-body">
                 <div class="form-group">
-                  <label for="exampleInputEmail1">Category Name</label>
-                  <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Category name">
+                  <label for="categoryname">Category Name</label>
+                  <input type="text" class="form-control" id="categoryname" [(ngModel)]="category.name" required name="name" #name="ngModel" placeholder="Category name">
                 </div>
                
                 
                 <div class="form-check">
-                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                  <label class="form-check-label" for="exampleCheck1">Is Visible?</label>
+                  <input type="checkbox" [(ngModel)]="category.visible" name="visible" #visible="ngModel" class="form-check-input" id="isVisible">
+                  <label class="form-check-label" for="isVisible">Is Visible?</label>
                 </div>
               </div>
               <!-- /.card-body -->
 
               <div class="card-footer">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" [disabled]="!categoryForm.valid" class="btn btn-primary mr-2">Submit</button>
+                <a routerLink="/admin/category" class="btn btn-warning">Back</a>
               </div>
             </form>
           </div>
