--- a/src/app/Layout/sidebar/sidebar.component.html
+++ b/src/app/Layout/sidebar/sidebar.component.html
@@ -64,7 +64,7 @@
                 </li>
               
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a class="nav-link" href="#">
                         <i class="nav-icon fas fa-cog"></i>
                         <p>
                             Fitness Category
