--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('../node_modules/alertifyjs/build/css/alertify.min.css');
 .error-block{
     color:red;
 }
