--- a/src/app/Layout/sidebar/sidebar.component.html
+++ b/src/app/Layout/sidebar/sidebar.component.html
@@ -86,6 +86,24 @@
                         </li>
                     </ul>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <i class="nav-icon fas fa-cog"></i>
+                        <p>
+                            Fitness Artical
+                            <i class="fas fa-angle-left right"></i>
+                        </p>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a routerLink="article" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Artical</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
                
             </ul>
         </nav>
