--- a/src/app/Admin/article/add-article/add-article.component.html
+++ b/src/app/Admin/article/add-article/add-article.component.html
@@ -15,14 +15,16 @@
               <div class="card-body">
                 <div class="form-group">
                     <label for="categoryname">Select Category</label>
-                    <select class="form-control" required [(ngModel)]="article.categoryId" name="categoryId">
+                    <select class="form-control" required [(ngModel)]="article.categoryId" (change)="bindSubCategory(article.categoryId)" name="categoryId">
                         <option value="0">--select--</option>
+                        <option *ngFor="let item of visibleCategory" value="{{item.id}}">{{item.name}}</option>
                     </select>
                   </div>
                   <div class="form-group">
                     <label for="categoryname">Select Sub Category</label>
                     <select class="form-control" required [(ngModel)]="article.subCategoryId" name="subCategoryId">
                         <option value="0">--select--</option>
+                        <option *ngFor="let item of visibleSubCategory" value="{{item.id}}">{{item.subCategoryName}}</option>
                     </select>
                   </div>
                 <div class="form-group">
@@ -41,9 +43,13 @@
                   <div class="form-group">
                     <label for="customFile">Article Image</label>
                     <div class="custom-file">
-                      <input type="file" (change)="handleFileUpload($event.target.files)" class="custom-file-input" id="customFile">
+                      <input type="file" accept='image/*' (change)="handleFileUpload($event.target.files)" class="custom-file-input" id="customFile">
                       <label class="custom-file-label" for="customFile">Choose file</label>
                     </div>
+                  </div>
+                  <div class="form-group" *ngIf="imgURL">
+                    <label for="customFile"></label>
+                    <img [src]="imgURL" height="200" >
                   </div>
 
                   <div class="form-group">
@@ -56,7 +62,7 @@
                     <textarea class="textarea" id="txtArticleInHindi" placeholder="Full Article in Hindi" [(ngModel)]="article.articleInHindi" name="articleInHindi"
                           style="width: 100%; height: 200px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;"></textarea>
                   </div>
-                
+
                 <div class="form-check">
                   <input type="checkbox" name="visible" [(ngModel)]="article.visible" class="form-check-input" id="isVisible">
                   <label class="form-check-label" for="isVisible">Is Visible?</label>
@@ -74,7 +80,7 @@
 
         </div>
         <!--/.col (left) -->
-       
+
       </div>
       <!-- /.row -->
     </div><!-- /.container-fluid -->
