--- a/src/app/Admin/article/article.component.html
+++ b/src/app/Admin/article/article.component.html
@@ -7,11 +7,11 @@
           <div class="card">
             <div class="card-header">
               <h3 class="card-title">Article List</h3>
-              <a routerLink="/admin/addshortarticle" class="btn btn-success float-sm-right">Add Short Article</a>
+              <a routerLink="/admin/addshortarticle" class="btn btn-success float-sm-right">Add New Article</a>
             </div>
             <!-- /.card-header -->
             <div class="card-body">
-              <table id="example2" class="table table-bordered table-hover">
+              <table id="example2" class="table table-bordered table-hover table-responsive">
                 <thead>
                   <tr>
                     <th>S.No</th>
@@ -25,20 +25,24 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr >
-                    <td>1</td>
-                    <td>Exercise</td>
-                    <td>Back</td>
-                    <td>How to Do back workout</td>
-                    <td>This is my first article</td>
-                    <td>Image Url</td>
-                    <td>True</td>
-                    <td> 
-                      <a href="javascript:void(0)" class="btn btn-success mr-2" (click)="EditArticle(1)">Edit</a>
-                      <a href="javascript:void(0)" (click)="deleteArticle(1)" class="btn btn-danger mr-2">Delete</a>
+                  <tr *ngFor="let item of articleList; let i=index">
+                    <td>{{i+1}}</td>
+                    <td>{{item.categoryName}}</td>
+                    <td>{{item.subCategoryName}}</td>
+                    <td>{{item.heading}}</td>
+                    <td>{{item.shortArticle}}</td>
+                    <td><img src="{{ImageUrl}}{{item.image}}" height="150" /></td>
+                    <td>{{item.visible}}</td>
+                    <td>
+                      <a href="javascript:void(0)" class="btn btn-success mb-2" (click)="EditArticle(item.id)">
+                        <i class="fas fa-pencil-alt"></i>
+                      </a>
+                      <a href="javascript:void(0)" (click)="deleteArticle(item.id)" class="btn btn-warning">
+                        <i class="fas fa-trash-alt"></i>
+                      </a>
                     </td>
                   </tr>
-                  
+
                 </tbody>
               </table>
             </div>
