--- a/src/app/Admin/category/category.component.html
+++ b/src/app/Admin/category/category.component.html
@@ -26,11 +26,15 @@
                     <td>{{item.name}}
                     </td>
                     <td>{{item.visible}}</td>
-                    <td> 
-                      <a href="javascript:void(0)" class="btn btn-success mr-2" (click)="EditCategory(item.id)">Edit</a>
-                      <a href="javascript:void(0)" (click)="deleteCategory(item.id)" class="btn btn-danger">Delete</a>
+                    <td>
+                      <a href="javascript:void(0)" class="btn btn-success mr-2" (click)="EditCategory(item.id)">
+                        <i class="fa fa-pencil-alt"></i>
+                      </a>
+                      <a href="javascript:void(0)" (click)="deleteCategory(item.id)" class="btn btn-warning">
+                        <i class="fa fa-trash-alt"></i>
+                      </a>
                   </tr>
-                  
+
                 </tbody>
               </table>
             </div>
