--- a/src/app/Admin/category/subcategory/subcategory.component.html
+++ b/src/app/Admin/category/subcategory/subcategory.component.html
@@ -27,12 +27,16 @@
                     <td>{{item.categoryName}}</td>
                     <td>{{item.subCategoryName}}</td>
                     <td>{{item.visible}}</td>
-                    <td> 
-                      <a href="javascript:void(0)" class="btn btn-success mr-2" (click)="editSubCategory(item.id)">Edit</a>
-                      <a href="javascript:void(0)" class="btn btn-warning" (click)="deleteSubCategory(item.id)">Delete</a>
+                    <td>
+                      <a href="javascript:void(0)" class="btn btn-success mr-2" (click)="editSubCategory(item.id)">
+                        <i class="fa fa-pencil-alt"></i>
+                      </a>
+                      <a href="javascript:void(0)" class="btn btn-warning" (click)="deleteSubCategory(item.id)">
+                        <i class="fa fa-trash-alt"></i>
+                      </a>
                     </td>
                   </tr>
-                  
+
                 </tbody>
               </table>
             </div>
