--- a/src/app/Admin/category/addcategory/add-category.component.html
+++ b/src/app/Admin/category/addcategory/add-category.component.html
@@ -17,8 +17,22 @@
                   <label for="categoryname">Category Name</label>
                   <input type="text" class="form-control" id="categoryname" [(ngModel)]="category.name" required name="name" #name="ngModel" placeholder="Category name">
                 </div>
-               
-                
+                <div class="form-group">
+                  <label for="customFile">Category Banner Image</label>
+                  <div class="custom-file">
+                    <input type="file" accept='image/*' (change)="handleFileUpload($event.target.files)" class="custom-file-input" id="customFile">
+                    <label class="custom-file-label" for="customFile">Choose file</label>
+                  </div>
+                </div>
+
+                <div class="form-group" *ngIf="imgURL">
+                  <label for="customFile"></label>
+                  <img [src]="imgURL" height="200" >
+                </div>
+                <div class="form-group">
+                  <label for="categoryname">Quotes</label>
+                  <input type="text" class="form-control" id="quotes" [(ngModel)]="category.quotes" required name="quotes" #quotes="ngModel" placeholder="Quotes">
+                </div>
                 <div class="form-check">
                   <input type="checkbox" [(ngModel)]="category.visible" name="visible" #visible="ngModel" class="form-check-input" id="isVisible">
                   <label class="form-check-label" for="isVisible">Is Visible?</label>
