--- a/src/app/Layout/sidebar/sidebar.component.html
+++ b/src/app/Layout/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
 
-    <a href="index3.html" class="brand-link">
+    <a routerLink="dashboard" class="brand-link">
         <img src="../assets/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
             style="opacity: .8">
         <span class="brand-text font-weight-light">Apna Fitness</span>
@@ -13,7 +13,7 @@
                 <img src="../assets/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
-                <a href="#" class="d-block">Admin</a>
+                <a href="javascript:void(0)" class="d-block">Admin</a>
             </div>
         </div>
 
@@ -64,46 +64,21 @@
                 </li>
               
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <i class="nav-icon fas fa-cog"></i>
-                        <p>
-                            Fitness Category
-                            <i class="fas fa-angle-left right"></i>
-                        </p>
+                    <a routerLink="category" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Category</p>
                     </a>
-                    <ul class="nav nav-treeview">
-                        <li class="nav-item">
-                            <a routerLink="category" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Category</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a routerLink="subcategory" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Sub Category</p>
-                            </a>
-                        </li>
-                    </ul>
+                    <a routerLink="subcategory" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Sub Category</p>
+                    </a>
+                    <a routerLink="article" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Artical</p>
+                    </a>
                 </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <i class="nav-icon fas fa-cog"></i>
-                        <p>
-                            Fitness Artical
-                            <i class="fas fa-angle-left right"></i>
-                        </p>
-                    </a>
-                    <ul class="nav nav-treeview">
-                        <li class="nav-item">
-                            <a routerLink="article" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Artical</p>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
+                
                
             </ul>
         </nav>
