admin changes done

--- a/src/app/Layout/header/header.component.html
+++ b/src/app/Layout/header/header.component.html
@@ -103,15 +103,18 @@
                     <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
                 </div>
             </li>
-            <!-- <li class="nav-item">
-                <a class="nav-link" data-widget="fullscreen" href="#" role="button">
-                    <i class="fas fa-expand-arrows-alt"></i>
+            <li class="nav-item dropdown">
+                <a class="nav-link" data-toggle="dropdown" href="#">
+                    <i class="fas fa-caret-down"></i>
                 </a>
+                <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
+                    
+                    <a href="javascript:void(0)" (click)="logout()" class="dropdown-item">
+                        <i class="fas fa-lock mr-2"></i> Logout
+                    </a>
+                </div>
+                
             </li>
-            <li class="nav-item">
-                <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
-                    <i class="fas fa-th-large"></i>
-                </a>
-            </li> -->
+           
         </ul>
     </nav>
