--- a/src/app/Layout/sidebar/sidebar.component.html
+++ b/src/app/Layout/sidebar/sidebar.component.html
@@ -30,8 +30,7 @@
         </div> -->
 
         <nav class="mt-2">
-            <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu"
-                data-accordion="false">
+            <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
 
                 <li class="nav-item menu-open">
                     <a routerLink="dashboard" class="nav-link active">
@@ -62,24 +61,39 @@
                         </li>
                     </ul> -->
                 </li>
-              
+
                 <li class="nav-item">
                     <a routerLink="category" class="nav-link">
                         <i class="far fa-circle nav-icon"></i>
                         <p>Category</p>
                     </a>
+
+                </li>
+                <li class="nav-item">
                     <a routerLink="subcategory" class="nav-link">
                         <i class="far fa-circle nav-icon"></i>
                         <p>Sub Category</p>
                     </a>
+                </li>
+                <li class="nav-item">
                     <a routerLink="article" class="nav-link">
                         <i class="far fa-circle nav-icon"></i>
                         <p>Artical</p>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a routerLink="banner" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Banners</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a routerLink="story" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Stories</p>
+                    </a>
+                </li>
 
-                
-               
             </ul>
         </nav>
 
