--- a/src/app/Admin/stories/addstories/addstories.component.html
+++ b/src/app/Admin/stories/addstories/addstories.component.html
@@ -23,7 +23,11 @@
                                 <input type="text" class="form-control" id="videoUrl" [(ngModel)]="story.videoUrl"
                                     required name="videoUrl" #videoUrl="ngModel" placeholder="Video Url">
                             </div>
-
+                            <div class="form-group">
+                              <label for="categoryname">Image Url</label>
+                              <input type="text" class="form-control" id="imageUrl" [(ngModel)]="story.imageUrl"
+                                  required name="imageUrl" #imageUrl="ngModel" placeholder="Video Url">
+                          </div>
 
                             <div class="form-check">
                                 <input type="checkbox" [(ngModel)]="story.visible" name="visible" #visible="ngModel"
